--- a/text-c/dir-1.html
+++ b/text-c/dir-1.html
@@ -8,6 +8,79 @@
     </head>
 
     <body>
-        <h1>Hello World.</h1>
+
+        <header>
+            <h1>
+                Can We Teach Graphic Design History Without the Cult of Hero Worship?
+            </h1>
+            <p>
+                By Aggie Toppins
+            </p>
+        </header>
+
+        <main>
+
+            <article>
+                Let’s engage in a thought experiment. Think about what you know about graphic design history. Then omit all mention of design heroes. Try for a moment not to think about the objects of design. Consider instead the kinds of social forces that surround design as a practice: labor, technology, or politics, for example. 
+
+                Now let’s get more specific. Visualize, if you can, an agrarian culture being reshaped by industrial labor. Imagine leaving the farm for black-smoke-belching chimneys and the din of machines mixed with the chatter of myriad languages. Think about large groups of people migrating across the globe, displaced, but living in close quarters in crowded cities. Imagine the sublime and unprecedented speed of mass production. And then, in your mind’s eye, watch the world go to war—twice. 
+
+                Cultures clashing. Pistons pumping. Bombs dropping. What might it mean to respond to this as a designer? These are some of the conditions that lead to modernism and its utopian goal of bringing order to chaos.
+
+                <blockquote>
+                    Graphic design emerges from social, technological, economic, and political contexts.
+
+                </blockquote>
+
+                Admittedly, this thought experiment may be challenging. While we can readily visualize a poster, it is harder to imagine worlds. We’re more equipped to think about design history through the seductive work of prominent figures. Many students can name a formal feature of modernism (“it’s simple”) or possibly even a designer (Paul Rand) before being able to articulate the forces that bore this ethos into being.  
+
+                Since the 1980s, when graphic design history was still considered “a movement,” it has been common to teach the subject as a progression of styles with objects made by heroically talented people. This promotes connoisseurship, but it does not explain the underlying causes of design or how it related to its audiences. Graphic design emerges from social, technological, economic, and political contexts. It’s important for those who study its history to connect design and designers to these contexts first and foremost.
+
+                Early design historians sought to promote graphic design as a profession. They wanted to distinguish it from commercial art or the printing industry. To do this, they created legacy histories with a cast of brilliant characters to inspire future generations. 
+
+                In a 2009 article for Design and Culture, Johanna Drucker compared Phillip Meggs’ groundbreaking A History of Graphic Design (1983) to Richard Hollis’ Graphic Design: A Concise History (1994). These two books were instrumental in establishing the graphic design canon, and are still widely used in courses in Europe and the United States. Drucker offered a respectful and thorough critique, observing that in Meggs’ history, design objects are the result of a designer’s special genius rather than cultural influences or economic pressures. In Hollis’s model, pioneers still instigate change, but this happens within “social circumstances and cultural functions.”
+
+
+                <blockquote>
+                    History needs people, but it doesn’t need heroes.
+
+                </blockquote>
+
+                Throughout the 1990s, academic journals like Design Issues and Visible Language challenged historians to write more critical histories that would acknowledge both the social fabric that envelopes design and design’s role in economic systems. Newer books like Drucker and Emily McVarish’s Graphic Design History: A Critical Guide (2008, 2012) and Meredith Davis’ Graphic Design Theory (2012) offer fresh interpretations of a familiar narrative. These books start by describing shifting cultures and from there enter historically significant ideas, objects, and people.
+
+                Now that graphic design is a more established field, it’s time to do away with legacy histories. As Juliette Cezzar recently noted in an op-ed for Eye on Design, a number of new biographies are emerging to celebrate the underrepresented. While we may not encourage historical understanding simply by adding more profiles to the canon, we do need to study ways of knowing and making from overlooked communities in the past. Graphic design history tells of a singular, professional, and closed field. But the future is pluralistic, shared, and open. 
+
+                The graphic design industry shrouds itself in capitalist rhetoric which privileges individual achievement over social phenomena. It follows then that graphic design history, which is traditionally a discourse of capitalism, would emphasize individual achievements too. But nothing about this is natural. It is a historiographical conceit. 
+
+                History writing has a history of its own. In Thinking About History, historian Sarah Maza noted that history evolves to reflect the concerns of the present. She described history as what the present needs to know about the past. “In archaic and hierarchical societies, the ‘useful’ past is that of monarchs, military leaders, and great dynasties; in a democracy, citizens want to hear about the history of ‘the people,’” wrote Maza. In the 18th century, the task of the historian was to frame nationalistic narratives, but today’s historians understand that their goal is to explain change over time and bring the past to life in the present.
+
+                Graphic design, by focusing on its own version of monarchs and dynasties, maintains an outdated approach to history that further entrenches it as a hierarchical society. What present-day designers need to know about the past is not, for example, that Jan Tschichold made trailblazing book covers for Penguin. It’s more important to understand that Tschichold was one of many designers who responded to his social milieu by developing systems for standardization. The book covers are not self-evident objects. They exemplify an idea that emerged from a social condition. By reflecting on context first and formal qualities second, students of history might recognize that design is in dialogue with culture. They might even see in the modernist drive to standardize a parallel with today’s UX/UI professions. The past is in the present.
+
+                Meredith Davis’ chapter on modernism in Graphic Design Theory opens with an arresting image of a child—a cotton mill worker photographed by Lewis Hine in 1908. Davis skillfully brings to life a time of grossly exploitative labor, innovative technologies, and intensifying consumerism before she mentions a single object of modernist design. The past is gone and may be difficult to relate to, but in Davis’ text, that child worker announces modernism by putting a face on a radically transformative era. History needs people, but it doesn’t need heroes.
+
+                Davis’ text is an exemplary social history of design. In it no artifact or practitioner operates outside of the world. The Dada technique of photomontage is grounded in politics. The modernist dream of universal communication emerges from war-torn societies. The postmodern fascination with vernacular graphics is problematized in consideration of design’s class privilege. Davis’ reader is not asked to admire charming forms, but to recognize the ways design comports with cultural flux, even as it contradicts its own rhetoric.
+
+                <blockquote>
+                    Individual creators are, to no small extent, historical fabrications.
+
+                </blockquote>
+
+                Davis did not fully omit designers. Designers and design objects are secondary, even tertiary, to ideas that manifest from affective forces. It is true that certain people influenced design a great deal. But in Davis’ text, even these pivotal figures result from cultural conditions. 
+
+                In his essay “Changing Attitudes to Graphic Design History,” Adrian Shaughnessy observed that emerging designers seem disenchanted with the contemporary field while taking solace in history. He argued that “as the future becomes more and more dominated by digital platforms, strategies and methodologies, the reality for many thousands of graphic designers is that their role is increasingly marginalized.” Shaughnessy noted that design is often produced using templates, developed under supervision in collaborative teams, and controlled by strategists. “But to eyes disenchanted with the world of digital creativity,” he wrote, “graphic design’s past is being viewed afresh from the idealistic yearning of a return to the designer as individual creator.” 
+
+                And yet, before the computer, designers relied on analogous trades to realize their plans. They worked with typesetters and printers, for example, to produce a single artifact. Design has always been controlled by outside conditions; labor has always been collaborative. Many prominent designers, even if gifted leaders, were supported by teams who created value for their businesses. Individual creators are, to no small extent, historical fabrications. Let’s suspend the cult of hero worship in order to reflect on this myth. 
+
+                The nostalgia observed by Shaughnessy should inspire designers to examine their relationship to the past as it is mediated by history. Design heroes are mythical—we imagined them, and we can unimagine them. As a field, we should stop perpetuating the idea that designers are singular change-agents who act on culture from outside of it. Rather, we should make visible the complex social worlds in which designers practice. 
+
+                Correction: A previous version of this article included the sentence: “Throughout the 1990s, academic journals like Design Issues, Design and Culture, and Visible Language challenged historians to write more critical histories…” In fact, Design and Culture was founded in 2009, so we’ve removed this error. 
+
+
+
+
+            </article>
+
+
+        </main>
     </body>
 </html>
