linked articles in nav of landing page

--- a/home.html
+++ b/home.html
@@ -14,10 +14,23 @@
 
     <body>
         <header>
-
+            <ul>
+                <li>
+                    <a href="./text-a/dir-1.html">TEXT A</a>
+                </li>
+                <li>
+                    <a href="./text-b/dir-1.html">TEXT B</a>
+                </li>
+                <li>
+                    <a href="./text-c/dir-1.html">TEXT C</a>
+                </li>
+            </ul>
 
 
         </header>
+        <main>
+
+        </main>
 
 
 
