fixed home html

--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
     </head>
 
     <body>
+
         <header>
+            <h1>SOPHIA BAE</h1>
             <ul>
                 <li>
-                    <a href="./text-a/dir-1.html">TEXT A</a>
+                    <a href="./dir-1/index.html">DIRECTION 1</a>
                 </li>
                 <li>
-                    <a href="./text-b/dir-1.html">TEXT B</a>
+                    <a href="./dir-1/index.html">DIRECTION 1</a>
                 </li>
                 <li>
-                    <a href="./text-c/dir-1.html">TEXT C</a>
+                    <a href="./dir-1/index.html">DIRECTION 1</a>
                 </li>
             </ul>
 
