tested three different directions

--- a/dir-1/index.html
+++ b/dir-1/index.html
@@ -12,10 +12,7 @@
         <header>
             
             <h1 id="article-title">
-                <span>Knowing Your</span> 
-                <span>Design History</span> 
-                <span>is Crucial to</span> 
-                <span>Aesthetic Innovation</span>
+                KNOWING YOUR DESIGN HISTORY IS CRUCIAL TO AESTHETIC INNOVATION
             </h1>
 
             <section class="og-text">
