adjusted home page

--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
 
         <header>
             <h1>SOPHIA BAE</h1>
+            <h2>TYPOGRAPHY & INTERACTION</h2>
             <ul>
                 <li>
-                    <a href="./dir-1/index.html">DIRECTION 1</a>
+                    <a href="./dir-1/index.html">DIRECTION 1.</a>
                 </li>
                 <li>
-                    <a href="./dir-2/index.html">DIRECTION 1</a>
+                    <a href="./dir-2/index.html">DIRECTION 2.</a>
                 </li>
                 <li>
-                    <a href="./dir-3/index.html">DIRECTION 1</a>
+                    <a href="./dir-3/index.html">DIRECTION 3.</a>
                 </li>
             </ul>
 
