--- a/dir-1/index.html
+++ b/dir-1/index.html
@@ -10,6 +10,12 @@
     <body>
 
         <header>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">HOME</a></li>
+                </ul>
+            </nav>
+            
             
             <h1 id="article-title">
                 KNOWING YOUR DESIGN HISTORY IS CRUCIAL TO AESTHETIC INNOVATION
