--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         </title>
         
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+        <style>
+            @import 'reset.css' layer(reset);
+        </style>
         <link href="reset.css" rel="stylesheet">
         <link href="home.css" rel="stylesheet">
     </head>
