--- a/dir-2/index.html
+++ b/dir-2/index.html
@@ -10,6 +10,11 @@
     <body>
 
         <header>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">HOME</a></li>
+                </ul>
+            </nav>
             
             <h1 id="article-title">
                 Knowing Your Design History Is Crucial<br>To Aesthetic Innovation
