updated format with two additional articles + changed font

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <h2>TYPOGRAPHY & INTERACTION</h2>
             <ul>
                 <li>
-                    <a href="./dir-1/index.html">DIRECTION 1.</a>
+                    <a href="./article-1/index.html">ARTICLE 1.</a>
                 </li>
                 <li>
-                    <a href="./dir-2/index.html">DIRECTION 2.</a>
+                    <a href="./article-2/index.html">ARTICLE 2.</a>
                 </li>
                 <li>
-                    <a href="./dir-3/index.html">DIRECTION 3.</a>
+                    <a href="./article-3/index.html">ARTICLE 3.</a>
                 </li>
             </ul>
 
