--- a/article-3/index.html
+++ b/article-3/index.html
@@ -9,12 +9,18 @@
     </head>
 
     <body>
-        <div id="top-line" class="line">
+        <div class="dark-line">
             <nav>
                 <ul>
                     <li><a href="../index.html">HOME</a></li>
+                    <li><a href="../article-1/index.html">I</a></li>
+                    <li><a href="../article-2/index.html">II</a></li>
+                    <li><a href="/article-3/index.html">III</a></li>
                 </ul>
             </nav>
+        </div>
+        <div id="top-line" class="line">
+            
         </div>
 
         <header>
@@ -137,6 +143,16 @@
                 
             </article>
             <div id="top-line" class="line"></div>
+            <div class="dark-line">
+                <nav>
+                    <ul>
+                        <li><a href="../index.html">HOME</a></li>
+                        <li><a href="../article-1/index.html">I</a></li>
+                        <li><a href="../article-2/index.html">II</a></li>
+                        <li><a href="/article-3/index.html">III</a></li>
+                    </ul>
+                </nav>
+            </div>
 
 
 
