home page style match

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <h2>TYPOGRAPHY & INTERACTION</h2>
             <ul>
                 <li>
-                    <a href="./article-1/index.html">ARTICLE 1.</a>
+                    <a href="./article-1/index.html">I</a>
                 </li>
                 <li>
-                    <a href="./article-2/index.html">ARTICLE 2.</a>
+                    <a href="./article-2/index.html">II</a>
                 </li>
                 <li>
-                    <a href="./article-3/index.html">ARTICLE 3.</a>
+                    <a href="./article-3/index.html">III</a>
                 </li>
             </ul>
 
