figuring out responsiveness

--- a/index.html
+++ b/index.html
@@ -19,17 +19,20 @@
         <header>
             <h1>SOPHIA BAE</h1>
             <h2>TYPOGRAPHY & INTERACTION</h2>
-            <ul>
-                <li>
-                    <a href="./article-1/index.html">I</a>
-                </li>
-                <li>
-                    <a href="./article-2/index.html">II</a>
-                </li>
-                <li>
-                    <a href="./article-3/index.html">III</a>
-                </li>
-            </ul>
+            <nav>
+                <ul>
+                    <a href="./article-1/index.html"><li>
+                        I
+                    </li></a>
+                    <a href="./article-2/index.html"><li>
+                        II
+                    </li></a>
+                    <a href="./article-3/index.html"><li>
+                        III
+                    </li></a>
+                </ul>
+            </nav>
+            
 
 
         </header>
