cohesive branding on all three

--- a/article-3/index.html
+++ b/article-3/index.html
@@ -12,7 +12,7 @@
         <div class="dark-line">
             <nav>
                 <ul>
-                    <li><a href="../index.html">HOME</a></li>
+                    <li><a href="../index.html">H</a></li>
                     <li><a href="../article-1/index.html">I</a></li>
                     <li><a href="../article-2/index.html">II</a></li>
                     <li><a href="/article-3/index.html">III</a></li>
@@ -28,7 +28,7 @@
             
             <section class="title-sec">
                 <h1 id="article-title">
-                CAN WE TEACH GRAPHIC DESIGN HISTORY WITHOUT THE CULT OF HERO WORSHIP?
+                CAN WE TEACH <span>GRAPHIC DESIGN HISTORY</span> WITHOUT THE CULT OF <span>HERO WORSHIP</span>?
                 </h1>
 
             <section class="og-text">
@@ -144,13 +144,20 @@
             <div class="dark-line">
                 <nav>
                     <ul>
-                        <li><a href="../index.html">HOME</a></li>
+                        
                         <li><a href="../article-1/index.html">I</a></li>
                         <li><a href="../article-2/index.html">II</a></li>
                         <li><a href="/article-3/index.html">III</a></li>
+                        <li><a href="../index.html">H</a></li>
                     </ul>
                 </nav>
             </div>
+
+            <footer>
+                <p>
+                    Typography & Interaction © Sophia Bae 2025
+                </p>
+            </footer>
 
 
 
