home page style fix

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <style>
+            @import 'home.css';
             @import 'reset.css' layer(reset);
+
         </style>
-        <link href="reset.css" rel="stylesheet">
-        <link href="home.css" rel="stylesheet">
+        
+        <!-- <link href="reset.css" rel="stylesheet"> -->
     </head>
 
     <body>
@@ -21,13 +23,13 @@
             <h2>TYPOGRAPHY & INTERACTION</h2>
             <nav>
                 <ul>
-                    <a href="./article-1/index.html"><li>
+                    <a  href="./article-1/index.html"><li id="art1-nav">
                         I
                     </li></a>
-                    <a href="./article-2/index.html"><li>
+                    <a href="./article-2/index.html"><li id="art2-nav">
                         II
                     </li></a>
-                    <a href="./article-3/index.html"><li>
+                    <a href="./article-3/index.html"><li id="art3-nav">
                         III
                     </li></a>
                 </ul>
