--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
     </head>
 
     <body>
+        <div class="dark-line"></div>
+        <div id="top-line"class="line"></div>
 
         <header>
-            <h1>SOPHIA BAE</h1>
-            <h2>TYPOGRAPHY & INTERACTION</h2>
+            <h1>RETHINKING <span>GRAPHIC DESIGN</span> HISTORY</h1>
+            <h2>SOPHIA BAE</h2>
+            <h3>TYPOGRAPHY & INTERACTION</h3>
             <nav>
                 <ul>
                     <a  href="./article-1/index.html"><li id="art1-nav">
@@ -38,8 +41,23 @@
 
 
         </header>
-        <main>
 
+
+        <main>
+            <section class="intro">
+                <p>
+                Graphic design history is often presented as a sequence of iconic works and celebrated figures, but the pieces collected in this binding show how design is shaped just as much by context as by creators. From the cycles of style described by Kristen Coogan to the analyses of histories by Aggie Toppins, readers are able to consider what contexts and which figures ultimately shape the field.  
+                </p>
+                <p>
+                Designed as a minimalist, typographic environment, this binding represents a collection of texts that is meant to guide you across these ideas, revealing how design evolves with social, political, and historical contexts. 
+                </p>
+            </section>
+            <section class="colophon">
+                <p>
+                    Designed and structured by Sophia Bae—using HTML and CSS—for Typography & Interaction I at Parsons School of Design, in New York City. 
+                </p>
+            </section>
+            
         </main>
 
 
@@ -47,8 +65,13 @@
     </body>
 
 
-
-
+    <div class="line"></div>
+    <footer>
+        <p>
+            Typography & Interaction © Sophia Bae 2025
+        </p>
+        
+    </footer>
 
 
 
