--- a/article-2/index.html
+++ b/article-2/index.html
@@ -54,7 +54,7 @@
             <article>
 
                 <p class="context">
-                    This story is part of our <em>Weekend Reads</em> series, where we highlight a story we love from the archives.
+                    Design history should expand beyond professional narratives to <em>include</em> the cultural and social dynamics of everyday people. 
                 </p>
 
                 <div id="top-line" class="line"></div>
@@ -140,7 +140,7 @@
                 <ul>
                     
                     <li><a href="../article-1/index.html">I</a></li>
-                    <li><a href="/article-2/index.html">II</a></li>
+                    <li><a id="active-nav"href="/article-2/index.html">II</a></li>
                     <li><a href="../article-3/index.html">III</a></li>
                     <li><a href="../index.html">H</a></li>
                 </ul>
