--- a/article-3/index.html
+++ b/article-3/index.html
@@ -54,7 +54,7 @@
             <article>
 
                 <p class="context">
-                    This story is part of our <em>Weekend Reads</em> series, where we highlight a story we love from the archives.
+                    Graphic design history must stop <em>glorifying individual "heroes"</em> and prioritize the economic, political, and cultural forces that externally impact design.
                 </p>
 
                 <div id="top-line" class="line"></div>
@@ -150,7 +150,7 @@
                         
                         <li><a href="../article-1/index.html">I</a></li>
                         <li><a href="../article-2/index.html">II</a></li>
-                        <li><a href="/article-3/index.html">III</a></li>
+                        <li><a id="active-nav"href="/article-3/index.html">III</a></li>
                         <li><a href="../index.html">H</a></li>
                     </ul>
                 </nav>
