--- a/article-1/index.html
+++ b/article-1/index.html
@@ -129,7 +129,7 @@
                 <nav>
                 <ul>
                     
-                    <li><a href="/article-1/index.html">I</a></li>
+                    <li><a id="active-nav" href="/article-1/index.html">I</a></li>
                     <li><a href="../article-2/index.html">II</a></li>
                     <li><a href="../article-3/index.html">III</a></li>
                     <li><a href="../index.html">H</a></li>
