mixed styles of sequence

--- a/index.html
+++ b/index.html
@@ -45,12 +45,17 @@
 
 
         <main>
-
+            <h2 id="intro-title"><p>
+                A DIGITAL MINI-BOOK ON <span>CONTEXT AND HISTORY</span> IN DESIGN
+            </p></h2>
             <section class="intro">
                 
                 <section class="intro-text">
                     <p>
-                    Graphic design history is often presented as a sequence of iconic works and celebrated figures, but the pieces collected in this binding show how design is shaped just as much by context as by creators. From the cycles of style described by Kristen Coogan to the analyses of histories by Aggie Toppins, readers are able to consider what contexts and which figures ultimately shape the field.  
+                    Graphic design history is often presented as a sequence of iconic works and celebrated figures, but the pieces collected in this binding show how design is shaped just as much by context as by creators. 
+                    </p>
+                    <p>
+                        From the cycles of style described by Kristen Coogan to the analyses of histories by Aggie Toppins, readers are able to consider what contexts and which figures ultimately shape the field.  
                     </p>
                     <p>
                     Designed as a minimalist, typographic environment, this binding represents a collection of texts that is meant to guide you across these ideas, revealing how design evolves with social, political, and historical contexts. 
