--- a/index.html
+++ b/index.html
@@ -27,14 +27,20 @@
 
             <nav>
                 <ul>
-                    <a  href="./article-1/index.html"><li id="art1-nav">
-                        I
+                    <a  href="./article-1/index.html"><li id="art1-nav"><p>
+                        KNOWING YOUR <span>DESIGN HISTORY</span> IS <span>CRUCIAL</span> TO <span>AESTHETIC INNOVATION</span>
+                    </p>
+                        
                     </li></a>
-                    <a href="./article-2/index.html"><li id="art2-nav">
-                        II
-                    </li></a>
+                    <a href="./article-2/index.html"><li id="art2-nav"><p>
+                        WE NEED <span>GRAPHIC DESIGN HISTORIES</span> THAT <span>LOOK BEYOND</span> THE PROFESSION
+
+                    </p></li></a>
                     <a href="./article-3/index.html"><li id="art3-nav">
-                        III
+                        <p>
+                            CAN WE TEACH <span>GRAPHIC DESIGN HISTORY</span> WITHOUT THE CULT OF <span>HERO WORSHIP</span>?
+
+                        </p>
                     </li></a>
                 </ul>
             </nav>
