tweaked svg, more responsiveness

--- a/article-1/index.html
+++ b/article-1/index.html
@@ -105,7 +105,7 @@
                     <p class="pg">
                         In the late 1910s and early 1920s, Constructivism grew out of a Soviet State sponsored movement designed to disseminate political doctrine. <span class="slant">Collectivism</span>, <span class="slant2">universality</span>, <span class="slant">practicality</span>, <span class="slant2">industry</span>, and <span class="slant">purity</span> evoked the new Soviet utopia, yielding a simplified red, black, and white Communist palette. Designs like El Lisstizky’s iconic Beat the Whites with the Red Wedge and layouts for Vladimir Mayakovsky’s For the Voice, featured intoxicating thick red and black stripes, primary shapes, and images that comprised a universal language engaging an illiterate peasant population. Type was meant to be seen and heard. The dynamically composed forms <mark>conjure a vision of the new world, “constructed” through a new visual architecture.</mark>
                     </p>
-                    <p id="eleven"class="label">11</p>
+                    <p id="widen"class="label">11</p>
                     <p class="pg">
                         Unlike the Memphis Group, the Constructivist style cycle suffocated under Stalin’s 1930s Socialist Realist mandate, and thus never made it to the mainstream. It tip-toed around subsequent cliche, embarrassment, death, etc. on the Great Wheel of Style, yet over the decades, the style was still <span class="slant2">fetishized</span> and <span class="slant">revived</span>. In one prominent example, Neville Brody’s 1980s design for The Face looks like a page out of Mayakosvky’s book, with heavily ruled type, directional marks and idiosyncratic typographic maneuvers that operate linguistically and graphically. 
                     </p>
