more spacing fixes + responsiveness for more devices

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <header>
             <!-- https://www.svgrepo.com/svg/94674/books-stack-of-three -->
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"viewBox="0 75 320 150">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"viewBox="0 60 325 170">
                 <g class="bookstack">
                     <path d="M311.175,115.775c-1.355-10.186-1.546-27.73,7.915-33.621c0.169-0.108,0.295-0.264,0.443-0.398
                     c7.735-2.474,13.088-5.946,8.886-10.618l-114.102-34.38L29.56,62.445c0,0-21.157,3.024-19.267,35.894
@@ -91,7 +91,7 @@
                     src="img/designdefinitions.jpg" 
                     alt="What is Design? explained in various definitions." 
                     loading="lazy">
-                <figcaption>Pacenti, Elena. “[Poster exploring multiple definitions of design].” Instagram, uploaded by <a  href="https://www.instagram.com/thecharliefund">@thecharliefund</a>.
+                <figcaption>Pacenti, Elena. “[Poster exploring multiple definitions of design].” Instagram, posted by <a  href="https://www.instagram.com/thecharliefund">@thecharliefund</a>.
                 </figcaption>
             </figure>
 
