--- a/article-1/index.html
+++ b/article-1/index.html
@@ -22,7 +22,7 @@
                     <li><a href="../index.html">cover</a></li>
                     <li><a id="active-nav" href="../article-1/index.html">style cycles</a></li>
                     <li><a href="../article-2/index.html">people's design</a></li>
-                    <li ><a href="/article-3/index.html">de-heroizing</a></li>
+                    <li ><a href="../article-3/index.html">de-heroizing</a></li>
 
                 
                 </ul>
