changed article 1 summary and title responsiveness

--- a/article-1/index.html
+++ b/article-1/index.html
@@ -58,7 +58,7 @@
             <article>
 
                 <p class="context">
-                    This story is part of our <em>Weekend Reads</em> series, where we highlight a story we love from the archives.
+                    Designers who study the past are better equipped to <em>push boundaries</em> deliberately rather than unknowingly repeat what has already been done.
                 </p>
 
                 <div id="top-line" class="line"></div>
