finishing touches with links and readme

--- a/article-2/index.html
+++ b/article-2/index.html
@@ -38,7 +38,7 @@
 
             <section class="og-text">
                 <p id="og-author" class="art-detail">
-                    Aggie Toppins
+                    <a target="_blank"href="https://eyeondesign.aiga.org/we-need-graphic-design-histories-that-look-beyond-the-profession/">Aggie Toppins</a>
                 </p>
                 <p id="og-date" class="art-detail">
                     June 10, 2021
