--- a/article-3/index.html
+++ b/article-3/index.html
@@ -38,7 +38,7 @@
 
             <section class="og-text">
                 <p id="og-author" class="art-detail">
-                    Aggie Toppins
+                    <a target="_blank"href="https://eyeondesign.aiga.org/can-we-teach-graphic-design-history-without-the-cult-of-hero-worship/">Aggie Toppins</a>
                 </p>
                 <p id="og-date" class="art-detail">
                     May 29, 2020
@@ -183,15 +183,7 @@
             </article>
             <!-- <div id="top-line" class="line"></div> -->
             <div class="dark-line">
-                <!-- <nav>
-                    <ul>
-                        
-                        <li><a href="../article-1/index.html">I</a></li>
-                        <li><a href="../article-2/index.html">II</a></li>
-                        <li><a id="active-nav"href="/article-3/index.html">III</a></li>
-                        <li><a href="../index.html">H</a></li>
-                    </ul>
-                </nav> -->
+                
             </div>
 
             <footer>
