--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     src="img/designdefinitions.jpg" 
                     alt="What is Design? explained in various definitions." 
                     loading="lazy">
-                <figcaption>Pacenti, Elena. “[Poster exploring multiple definitions of design].” Instagram, posted by <a  href="https://www.instagram.com/thecharliefund">@thecharliefund</a>.
+                <figcaption>Pacenti, Elena. “[Poster exploring multiple definitions of design].” Instagram, posted by <a  target="_blank"href="https://www.instagram.com/thecharliefund">@thecharliefund</a>.
                 </figcaption>
             </figure>
 
