--- a/article-1/index.html
+++ b/article-1/index.html
@@ -40,7 +40,7 @@
 
                 <section class="og-text">
                     <p id="og-author" class="art-detail">
-                        Kristen Coogan
+                        <a target="_blank"href="https://eyeondesign.aiga.org/knowing-your-design-history-is-crucial-to-aesthetic-innovation/">Kristen Coogan</a>
                     </p>
                     <p id="og-date" class="art-detail">
                         June 22, 2020
@@ -129,15 +129,7 @@
             </article>
             <div id="top-line" class="line"></div>
             <div class="dark-line">
-                <!-- <nav>
-                <ul>
-                    
-                    <li><a id="active-nav" href="/article-1/index.html">I</a></li>
-                    <li><a href="../article-2/index.html">II</a></li>
-                    <li><a href="../article-3/index.html">III</a></li>
-                    <li><a href="../index.html">H</a></li>
-                </ul>
-                </nav> -->
+    
             </div>
 
             <footer>
