changed styling for article 2

--- a/index.html
+++ b/index.html
@@ -42,45 +42,63 @@
             <div class="hero-deco"></div>
         </section>
 
-        <!-- ARTICLE LIST -->
-        <section class="article-list">
-            <div class="article-list-heading">Three Readings</div>
+        <!-- BOOKSHELF -->
+        <section class="bookshelf">
+            <div class="shelf-label">Three Readings</div>
+            <div class="shelf">
 
-            <a href="./article-1/index.html" class="article-link link-green fade-up">
-                <div class="article-link-top">
-                    <span class="article-num">01</span>
-                    <span class="article-link-title">Knowing Your Design History Is Crucial to Aesthetic Innovation</span>
-                </div>
-                <div class="article-link-meta">
-                    <span class="article-link-author">Kristen Coogan</span>
-                    <span class="article-link-tag">Style Cycles</span>
-                </div>
-                <span class="article-link-arrow">→</span>
-            </a>
+                <a href="./article-1/index.html" class="spine spine-green fade-up">
+                    <div class="spine-inner">
+                        <div class="spine-top">
+                            <span class="spine-num">01</span>
+                            <div class="spine-ornament">✦</div>
+                        </div>
+                        <div class="spine-title-wrap">
+                            <span class="spine-title">Knowing Your Design History Is Crucial to Aesthetic Innovation</span>
+                        </div>
+                        <div class="spine-bottom">
+                            <div class="spine-ornament">◆</div>
+                            <span class="spine-author">Coogan</span>
+                            <span class="spine-tag">Style Cycles</span>
+                        </div>
+                    </div>
+                </a>
 
-            <a href="./article-2/index.html" class="article-link link-teal fade-up">
-                <div class="article-link-top">
-                    <span class="article-num">02</span>
-                    <span class="article-link-title">We Need Graphic Design Histories That Look Beyond the Profession</span>
-                </div>
-                <div class="article-link-meta">
-                    <span class="article-link-author">Aggie Toppins</span>
-                    <span class="article-link-tag">People's Design</span>
-                </div>
-                <span class="article-link-arrow">→</span>
-            </a>
+                <a href="./article-2/index.html" class="spine spine-teal fade-up">
+                    <div class="spine-inner">
+                        <div class="spine-top">
+                            <span class="spine-num">02</span>
+                            <div class="spine-ornament">❖</div>
+                        </div>
+                        <div class="spine-title-wrap">
+                            <span class="spine-title">We Need Graphic Design Histories That Look Beyond the Profession</span>
+                        </div>
+                        <div class="spine-bottom">
+                            <div class="spine-ornament">◈</div>
+                            <span class="spine-author">Toppins</span>
+                            <span class="spine-tag">People's Design</span>
+                        </div>
+                    </div>
+                </a>
 
-            <a href="./article-3/index.html" class="article-link link-indigo fade-up">
-                <div class="article-link-top">
-                    <span class="article-num">03</span>
-                    <span class="article-link-title">Can We Teach Graphic Design History Without the Cult of Hero Worship?</span>
-                </div>
-                <div class="article-link-meta">
-                    <span class="article-link-author">Aggie Toppins</span>
-                    <span class="article-link-tag">De-heroizing</span>
-                </div>
-                <span class="article-link-arrow">→</span>
-            </a>
+                <a href="./article-3/index.html" class="spine spine-indigo fade-up">
+                    <div class="spine-inner">
+                        <div class="spine-top">
+                            <span class="spine-num">03</span>
+                            <div class="spine-ornament">✧</div>
+                        </div>
+                        <div class="spine-title-wrap">
+                            <span class="spine-title">Can We Teach Graphic Design History Without the Cult of Hero Worship?</span>
+                        </div>
+                        <div class="spine-bottom">
+                            <div class="spine-ornament">◇</div>
+                            <span class="spine-author">Toppins</span>
+                            <span class="spine-tag">De-heroizing</span>
+                        </div>
+                    </div>
+                </a>
+
+            </div>
         </section>
 
         <!-- ABOUT / INTRO WITH IMAGE -->
